# sqlalchemy2.0_base

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
demo/: base.py  test_base.py
