[tool.poetry]
name = "sql-demo"
version = "0.0.1"
description = ""
authors = ["walden <wml@nosugartech.com>"]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
sqlalchemy = "^2.0.0b3"
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
testpaths = "tests"
asyncio_mode="auto"
addopts = '''
  --strict-markers
  --tb=short
  --cov-report=term
  --cov-report=html
  --no-cov-on-fail
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
warn_unused_ignores = false
warn_redundant_casts = false
warn_unused_configs = false
check_untyped_defs = true
disallow_untyped_defs = true
show_error_codes = true

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[[tool.mypy.overrides]]
module = [
    "migrations.*",
    "tests.*",
]
check_untyped_defs = false
disallow_untyped_defs = false
